# desafio-gdash-2025-2

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
services/api-nest/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
services/api-nest/src/: env.validation.ts  main.ts
services/api-nest/src/app/: app.module.ts
services/api-nest/src/common/filters/: http-execption.filter.ts
services/api-nest/src/common/guards/: worker-auth.guard.ts
services/api-nest/src/common/interceptors/: response.interceptor.ts
services/api-nest/src/common/interfaces/: get-response-exception.filter.ts
services/api-nest/src/common/pipes/: parseObjectIdPipe.ts
services/api-nest/src/helpers/: climate-insights-prompt.ts
services/api-nest/src/modules/auth/: auth.module.ts
services/api-nest/src/modules/explore/: explore.module.ts
services/api-nest/src/modules/users/: users.module.ts
services/api-nest/test/: app.e2e-spec.ts
services/frontend/desafio-gdash-2025-02/: .env.example  README.md  package.json  vite.config.ts
services/frontend/desafio-gdash-2025-02/src/: routeTree.gen.ts
services/go-worker/: .env.example  README.MD  main.go
services/go-worker/config/: settings.go
services/go-worker/consumer/: weather_consumer.go
services/go-worker/contracts/: weather_contracts.go
services/go-worker/mq/: connection.go
services/go-worker/validate/: validate_weather_data.go
services/python-producer/core-python/: .dockerignore  .env.example  .gitignore  DockerFile  README.md  pyproject.toml
services/python-producer/core-python/src/: main.py
services/python-producer/core-python/src/config/: settings.py
services/python-producer/core-python/src/contracts/: __init__.py  weather_contract.py
services/python-producer/core-python/src/logger/: logger.py
services/python-producer/core-python/src/mq/: __init__.py  connection.py  producer.py
services/python-producer/core-python/src/services/: __init__.py  weather_service.py
(+62 files in other folders)
